[gd_scene load_steps=7 format=3 uid="uid://de3s87m178ass"]

[ext_resource type="Script" path="res://code/pushover.gd" id="1_5wdy3"]
[ext_resource type="PackedScene" uid="uid://bulwrisqfjkqe" path="res://scenes/ground.tscn" id="1_cctgv"]
[ext_resource type="PackedScene" uid="uid://dwksqbyxtxf10" path="res://scenes/water.tscn" id="2_pxibe"]
[ext_resource type="Material" uid="uid://csf5w5n6wn7f" path="res://art/Textures/Levelcolors/wall.tres" id="3_p4co8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s2qhb"]
size = Vector3(29, 9, 2)

[sub_resource type="BoxMesh" id="BoxMesh_1abqq"]
material = ExtResource("3_p4co8")
size = Vector3(29, 9, 2)

[node name="Pushover" type="Node3D"]
script = ExtResource("1_5wdy3")

[node name="Spawns" type="Node3D" parent="."]

[node name="Node3D" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 5, -16)

[node name="Node3D2" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 5, -16)

[node name="Node3D3" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 5, 16)

[node name="Node3D4" type="Node3D" parent="Spawns"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 5, 16)

[node name="Ground" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 0, -32)

[node name="Ground2" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 0, -16)

[node name="Ground3" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 0, 0)

[node name="Ground4" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 0, 16)

[node name="Ground5" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -32, 0, 32)

[node name="Ground6" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, -32)

[node name="Ground7" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, -16)

[node name="Ground8" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 0)

[node name="Ground9" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 16)

[node name="Ground10" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, 32)

[node name="Ground11" parent="." instance=ExtResource("1_cctgv")]

[node name="Ground12" parent="." instance=ExtResource("1_cctgv")]

[node name="Ground13" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, -32)

[node name="Ground14" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, -16)

[node name="Ground15" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 0)

[node name="Ground16" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 16)

[node name="Ground17" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, 32)

[node name="Ground18" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, -32)

[node name="Ground19" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, -16)

[node name="Ground20" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, 0)

[node name="Ground21" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, 16)

[node name="Ground22" parent="." instance=ExtResource("1_cctgv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, 32)

[node name="Wall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.5, 5.5, -9)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall"]
shape = SubResource("BoxShape3D_s2qhb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall"]
mesh = SubResource("BoxMesh_1abqq")

[node name="Wall2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.5, 5.5, 39)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall2"]
shape = SubResource("BoxShape3D_s2qhb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall2"]
mesh = SubResource("BoxMesh_1abqq")

[node name="Wall3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.5, 5.5, -39)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall3"]
shape = SubResource("BoxShape3D_s2qhb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall3"]
mesh = SubResource("BoxMesh_1abqq")

[node name="Wall4" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.5, 5.5, 9)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall4"]
shape = SubResource("BoxShape3D_s2qhb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall4"]
mesh = SubResource("BoxMesh_1abqq")

[node name="Water" parent="." instance=ExtResource("2_pxibe")]
